Add project name to project list API output. Fixes #19
